fix collapsed navbar

--- a/app/assets/stylesheets/jednotka/theme/structure/_header.scss
+++ b/app/assets/stylesheets/jednotka/theme/structure/_header.scss
@@ -24,7 +24,7 @@
 
     &.header--default {
       background: #fff;
-      border-bottom: solid 1px $very-light;
+      // border-bottom: solid 1px $very-light;
 
       .navbar-default,
       .navbar-default.navbar-collapsed-sm {
@@ -126,7 +126,7 @@
 
     &.header--default {
       background: #fff;
-      border-bottom: solid 1px $very-light;
+      // border-bottom: solid 1px $very-light;
 
       .navbar-default,
       .navbar-default.navbar-collapsed-sm {
